Fix : 테스트 코드 버그 수정 및 정상 동작 확인